--- a/mobile/app.json
+++ b/mobile/app.json
@@ -4,6 +4,14 @@
     "slug": "bethehero",
     "privacy": "public",
     "sdkVersion": "36.0.0",
+    "ios": {
+      "bundleIdentifier": "com.lmgsolucoestecnologicas.bethehero",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.lmgsolucoestecnologicas.bethehero",
+      "versionCode": 1
+    },
     "platforms": [
       "ios",
       "android",
